# Maxma

./: .env.example  .git_commit_msg_tmp.txt  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  0001-all-red-round-1-fixes.patch  0001-base-commit-with-all-fixes.patch  BLUE_TEAM_ROUND3_REPORT.md  BLUE_TEAM_ROUND4_REPORT.md  CLAUDE.md  CODE_REVIEW.md  DESIGN.md  FIND.md  HANDOFF.md  LICENSE  PLAN-1.md  PRODUCT.md  PROJECT_INDEX.md  README.md  RED_TEAM_ROUND6_REPORT.md  SECURITY.md  app_paths.py  build-portable.bat  constraints.txt  main.py  mypy.ini  plan-backend-audit.md  plan-p0-fixes.md  pyproject.toml  pytest.bat  requirements-lock.txt  requirements.txt  setup-dev.bat  setup.bat  setup.py  start.bat  start_dev.py  update-lock.bat  version.py
agent/: approval_gateway.py  approval_tool_node.py  audit_log.py  capability_policy.py  circuit_breaker.py  context_manager.py  coordinator.py  delegation_scope.py  error_recovery.py  execution_boundary.py  execution_lease.py  executor.py  graph.py  hooks.py  llm_reviewer.py  loop_detector.py  model_routing.py  performance.py  permission_policy.py  persona_loader.py  planner.py  project_scanner.py  prompts.py  runtime_context.py  session_health.py  step_state.py  think_path.py  verifier.py
api/: activity_hub.py  auth.py  checkpointer_factory.py  const_session_store.py  context_usage.py  cors_config.py  dependencies.py  diagnostics.py  errors.py  health.py  interaction.py  logging_config.py  metrics.py  runtime_status.py  server.py  session_manager.py  time_traveler.py  ws_registry.py  yaml_store.py
bun-sidecar/: build.ps1  package-lock.json  package.json  tsconfig.json
clients/: cli.py  qqbot.py
config/: model_roles.yaml  settings.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/nsis/: installer-hooks.nsh
desktop/src-tauri/resources/default-config/: mcp_servers.yaml
desktop/src-tauri/src/: main.rs  port_manager.rs
dev_docs/: capability-matrix.md  path-whitelist.md  permission-modes.md  sandbox-boundaries.md
docs/: 00-当前架构.md  00-结构总览.md  02-LangGraph状态图与状态管理.md  04-记忆系统.md  05-提示词与人设系统.md  07-Web前端系统总览.md  10-REST与前后端数据交互.md  12-从开发到生产：前端工程化.md  ROADMAP.md  backend-bundle-rules.md  competitor-gap-analysis.md  context-optimization-plan.md  desktop-app-plan.md  desktop-build-checklist.md  enhancement-plan-v2.md  enhancement-plan-v3-stage1.md  enhancement-plan-v3-stage2.md  enhancement-plan-v3-stage3.md  enhancement-plan-v3-stage4.md  production-packaging-design.md  production-packaging-plan.md  security-contract.md  sticker-system-plan.md  sticker-system-roadmap.md  testing-checklist.md  了解_Maxma_大迭代_2026-07-16_11-52.md
maxma_platform/: __init__.py  event_dedup.py
memory/: __init__.py  coordinator.py  deep_memory.py  episodic.py  fact_retrieval.py  fact_store.py  ltm_outbox.py  memory_callback.py  memory_manager.py  memory_scheduler.py  memory_ticker.py  narrative.py  pii_guard.py  pinned_store.py  rolling_summary.py  semantic.py  ttl.py  user_init.py
plans/: 001-reduced-motion-global-fix.md  002-dsbutton-adoption.md  003-popover-transform-origin.md  004-keyframes-to-transitions.md  005-ease-token-consolidation.md  006-welcome-screen-duration.md  007-hover-gating.md  008-deduplicate-keyframes.md  009-session-item-stagger.md  010-activate-glass-system.md  011-scroll-fade-masks.md  012-glass-materialize-animation.md  013-reduced-transparency-support.md  014-context-menu-blur-mismatch.md  015-shadow-token-consolidation.md  016-remove-dead-sidebar-css.md  017-font-optical-sizing.md  018-tracking-tokens.md  019-glass-vibrancy.md  020-media-viewer-velocity-handoff.md  021-chatinput-resize-rubber-band.md  022-overscroll-behavior.md  023-scroll-to-bottom-button.md  README.md
platform/: __init__.py  keep_alive.py
scripts/: prepare_stickers.py
skills/: __init__.py
tests/: conftest.py  test_config_settings.py  test_macros_routes.py  test_main.py  test_path_security.py  test_persona_memory_isolation.py  test_providers_routes.py
tools/: __init__.py  base.py  base_diagnose.py  client.py  crypto.py  emotion_detector.py  formatting.py  mcp.py  mcp_connection_lifecycle.py  mcp_rate_limiter.py  mcp_runtime.py  mcp_security.py  path_security.py  registry.py  sticker_decision.py  sticker_preference_hooks.py  sticker_preferences.py  sticker_selector.py  sticker_utils.py  tool_base.py
web/: BUILD_ANALYSIS.md  DESIGN_ENG_REVIEW.md  UI_UX_REVIEW.md  (+78 more)
(+1054 files in other folders)
