[project]
name = "maxmahere"
dynamic = ["version"]
description = "MaxmaHere — oh-my-pi AI Agent Desktop Client"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "aiosqlite>=0.20.0",
    "beautifulsoup4>=4.12.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "filelock>=3.13.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/Libai-88/Maxma"
Repository = "https://github.com/Libai-88/Maxma.git"
Issues = "https://github.com/Libai-88/Maxma/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
extend-exclude = ["build", "dist", ".venv"]

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

[build-system]
requires = ["setuptools>=81.0"]
build-backend = "setuptools.build_meta"
