[package]
name = "maxma-here"
version = "2.6.0"
description = "MaxmaHere Desktop Application"
authors = ["Libai"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
tauri-plugin-http = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
