[package]
name = "maxma-here"
version = "2.6.6"
description = "MaxmaHere Desktop Application"
authors = ["Libai"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
tauri-plugin-http = "2"
log = "0.4"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Com", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_UI_Shell"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
